k8s/04-monitoring-ingresses/alertmanager-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: alertmanager-ingress
  namespace: monitoring
spec:
  ingressClassName: nginx
  rules:
  # Aquí está la magia del DNS dinámico para el laboratorio
  - host: <alertmanager_url> 
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: observabilidad-stack-kube-alertmanager
            port:
              number: 9093
