k8s/04-monitoring-ingresses/grafana-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: monitoring
spec:
  ingressClassName: nginx
  rules:
  # Aquí está la magia del DNS dinámico para el laboratorio
  - host: <grafana_url> 
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: observabilidad-stack-grafana
            port:
              number: 80
