k8s/04-monitoring-ingresses/prometheus-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus-ingress
  namespace: monitoring
spec:
  ingressClassName: nginx
  rules:
  # Aquí está la magia del DNS dinámico para el laboratorio
  - host: <prometheus_url>
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: observabilidad-stack-kube-prometheus
            port:
              number: 9090
